사용자 메인,통합검색/관리자 포스팅관리,수정 html.css 완성

--- a/frontRepo/user/html/UJDGR-0001.html
+++ b/frontRepo/user/html/UJDGR-0001.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>레이아웃</title>
+    <title>사용자메인</title>
 
     <!-- swiper -->
     <link rel="stylesheet" href="../css/swiper-bundle.css">
@@ -345,6 +345,77 @@
                     </ul>
 
                     <!-- 카테고리별 블로그 포스트 -->
+                    <div class="postbox">
+                        <div class="postImg"><img src="../images/content/img_main01.png"></div>
+                        <div class="postWrite"> 
+                            <div class="postWriteNick">
+                                <div class="postNickimg"><img src="../images/ico/ico_people.svg"></div>
+                                <div class="postNickname">작성자닉네임</div>
+                            </div>    
+                            <div class="postWriteLink"><a href="">피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다</a></div>
+                            <div class="postWrite12">
+                                <div class="postWrite1"><img src="../images/ico/ico_like.svg">   266</div>
+                                <div class="postWrite2"><img src="../images/ico/ico_reply.svg">    9</div>
+                            </div>         
+                        </div>
+                    </div>
+                    <div class="postbox">
+                        <div class="postImg"><img src="../images/content/img_main01.png"></div>
+                        <div class="postWrite"> 
+                            <div class="postWriteNick">
+                                <div class="postNickimg"><img src="../images/ico/ico_people.svg"></div>
+                                <div class="postNickname">작성자닉네임</div>
+                            </div>    
+                            <div class="postWriteLink"><a href="">피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다</a></div>
+                            <div class="postWrite12">
+                                <div class="postWrite1"><img src="../images/ico/ico_like.svg">   266</div>
+                                <div class="postWrite2"><img src="../images/ico/ico_reply.svg">    9</div>
+                            </div>         
+                        </div>
+                    </div>
+                    <div class="postbox">
+                        <div class="postImg"><img src="../images/content/img_main01.png"></div>
+                        <div class="postWrite"> 
+                            <div class="postWriteNick">
+                                <div class="postNickimg"><img src="../images/ico/ico_people.svg"></div>
+                                <div class="postNickname">작성자닉네임</div>
+                            </div>    
+                            <div class="postWriteLink"><a href="">피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다</a></div>
+                            <div class="postWrite12">
+                                <div class="postWrite1"><img src="../images/ico/ico_like.svg">   266</div>
+                                <div class="postWrite2"><img src="../images/ico/ico_reply.svg">    9</div>
+                            </div>         
+                        </div>
+                    </div>
+                    <div class="postbox">
+                        <div class="postImg"><img src="../images/content/img_main01.png"></div>
+                        <div class="postWrite"> 
+                            <div class="postWriteNick">
+                                <div class="postNickimg"><img src="../images/ico/ico_people.svg"></div>
+                                <div class="postNickname">작성자닉네임</div>
+                            </div>    
+                            <div class="postWriteLink"><a href="">피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다</a></div>
+                            <div class="postWrite12">
+                                <div class="postWrite1"><img src="../images/ico/ico_like.svg">   266</div>
+                                <div class="postWrite2"><img src="../images/ico/ico_reply.svg">    9</div>
+                            </div>         
+                        </div>
+                    </div>
+                    <div class="postbox">
+                        <div class="postImg"><img src="../images/content/img_main01.png"></div>
+                        <div class="postWrite"> 
+                            <div class="postWriteNick">
+                                <div class="postNickimg"><img src="../images/ico/ico_people.svg"></div>
+                                <div class="postNickname">작성자닉네임</div>
+                            </div>    
+                            <div class="postWriteLink"><a href="">피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다피오순두부찌개는 맛있다</a></div>
+                            <div class="postWrite12">
+                                <div class="postWrite1"><img src="../images/ico/ico_like.svg">   266</div>
+                                <div class="postWrite2"><img src="../images/ico/ico_reply.svg">    9</div>
+                            </div>         
+                        </div>
+                    </div>
+
 
                     <!-- 페이징 -->
                     <div class="paging_box">
