--- a/frontRepo/admin/index.html
+++ b/frontRepo/admin/index.html
@@ -264,7 +264,7 @@
                     date: '2023-11-26',
                     name: '전옥진',
                     con: '완료',
-                    etc: ''
+                    etc: 'admin_userList.jsp'
                 },
                 {
                     division: '',
@@ -273,7 +273,7 @@
                     date: '2023-11-26',
                     name: '전옥진',
                     con: '완료',
-                    etc: ''
+                    etc: 'admin_userDetail.jsp'
                 },
                 {
                     division: '',
@@ -282,7 +282,7 @@
                     date: '2023-11-26',
                     name: '전옥진',
                     con: '완료',
-                    etc: ''
+                    etc: 'admin_setting.jsp'
                 },
                 {
                     division: '',
