--- a/frontRepo/user/html/UJDGR-0025.html
+++ b/frontRepo/user/html/UJDGR-0025.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>계정관리 화면</title>
+    <title>개인정보 수정</title>
 
     <!-- css -->
     <link rel="stylesheet" href="../css/allCss.css">
@@ -206,54 +206,122 @@
                 </div>
 
                 <div class="right">
-                    <h2>블로그 정보</h2>
+                    <h2>마이페이지 (개인정보 수정)</h2>
 
                     <div class="content">
 
-                        <div class="account_setting">
-                            <dl class="blog_using">
-                                <dt>운영중인 블로그</dt>
-                                <dd>
-                                    <form action="">
-                                        <ul class="blog_list">
-                                            <li>
-                                                <input type="radio" id="blog1" name="blog">
-                                                <label for="blog1">
-                                                    <div class="img"><img src="../images/content/img_main01.png" alt=""></div>
-                                                    <div class="cont">
-                                                        <div class="tit">블로그제목</div>
-                                                        <a href="">jdgr/blog/유저닉네임 링크</a>
-                                                    </div>
-                                                    <div class="req">대표</div>
-                                                </label>
-                                            </li>
-                                            <li>
-                                                <input type="radio" id="blog2" name="blog">
-                                                <label for="blog2">
-                                                    <div class="img"><img src="../images/content/img_main01.png" alt=""></div>
-                                                    <div class="cont">
-                                                        <div class="tit">블로그제목</div>
-                                                        <a href="">jdgr/blog/유저닉네임 링크</a>
-                                                    </div>
-                                                    <div class="req">대표</div>
-                                                </label>
-                                            </li>
-                                        </ul>
-                                        <div class="btn_area">
-                                            <button>변경사항 저장</button>
-                                        </div>
-                                    </form>
-                                </dd>
-                            </dl>
-                            <dl class="blog_create">
-                                <dt>운영·개설</dt>
-                                <dd>
-                                    <div class="gg"><span>2개</span>의 블로그를 더 운영할 수 있습니다.</div>
-                                    <div class="btn_area">
-                                        <button>새 블로그 만들기</button>
-                                    </div>
-                                </dd>
-                            </dl>
+                        <div class="mypage_div">
+                            <hr>
+                            <table>
+                                <tbody>
+                                    <tr>
+                                        <td>이름</td>
+                                        <td>
+                                            <!-- 이름 입력 -->
+                                            <div class="form_box ico_id">
+                                                <input type="password" name="">
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    
+                                    <tr>
+                                        <td>이메일</td>
+                                        <td>
+                                            <!-- 이메일 출력 -->
+                                            <div class="form_box">
+                                                <input class="input_email" type="email" name="" disabled="">@
+                                                <input class="input_email" type="email" name="" disabled="">
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>비밀번호 변경</td>
+                                        <td>
+                                            <!-- 비번 변경 버튼 -->
+                                            <div class="form_box">
+                                                <div class="btn_box">
+                                                    <button class="btn_black" data-target="#pop_email">비밀번호 변경</button>
+                                                </div>
+                                                <span class="txt_msg">*사용자의 메일로 인증번호가 전송 되었습니다.</span>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>인증번호 입력</td>
+                                        <td>
+                                            <!-- 이름 입력 -->
+                                            <div class="form_box">
+                                                <div class="inp_btn">
+                                                    <input type="text" name="">
+                                                    <button>인증</button>
+                                                </div>
+                                                <span class="txt_msg">*인증완료</span>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>비밀번호</td>
+                                        <td>
+                                            <!-- 이름 입력 -->
+                                            <div class="form_box ico_id">
+                                                <input type="password" name="">
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>비밀번호 확인</td>
+                                        <td>
+                                            <!-- 이름 입력 -->
+                                            <div class="form_box ico_id">
+                                                <input type="password" name="">
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>닉네임</td>
+                                        <td>
+                                            <!-- 이름 입력 -->
+                                            <div class="form_box">
+                                                <div class="inp_btn">
+                                                    <input type="text" name="">
+                                                    <button>중복확인</button>
+                                                </div>
+                                                <span class="txt_msg">닉네임 중복확인이 완료되었습니다.</span>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>전화번호</td>
+                                        <td>
+                                            <!-- 이름 입력 -->
+                                            <div class="form_box ico_id">
+                                                <input type="password" name="">
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <!-- <tr>
+                                        <td></td>
+                                        <td>
+                                            <div class="form_box">
+                                                <div class="btn_box">
+                                                    <button class="btn_black dkdk" >변경사항 저장</button>
+                                                </div>
+                                                <div class="btn_box">
+                                                    <button class="btn_black dkdk">탈퇴하기</button>
+                                                </div>
+                                            </div>
+                                        </td>
+                                    </tr> -->
+                                </tbody>
+                            </table>
+                            <div class="form_box btn_center">
+                                <div class="btn_box">
+                                    <button class="btn_black dkdk">변경사항 저장</button>
+                                </div>
+                                <div class="btn_box">
+                                    <button class="btn_black dkdk">탈퇴하기</button>
+                                </div>
+                            </div>
                         </div>
 
                     </div>
