--- a/frontRepo/admin/html/AJDGR-0020.html
+++ b/frontRepo/admin/html/AJDGR-0020.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>포스트 목록</title>
+    <title>관리자 포스트 목록조회하기</title>
 
     <!-- css -->
     <link rel="stylesheet" href="../css/allCss.css">
@@ -97,11 +97,11 @@
                         </colgroup>
                         <thead>
                             <tr>
-                                <th scope="col">포스트 번호</th>
+                                <th scope="col">작성자</th>
                                 <th scope="col">블로그 번호</th>
+                                <th scope="col">포스트 번호</th>
                                 <th scope="col">카테고리명</th>
                                 <th scope="col">제목</th>
-                                <th scope="col">카테고리 그룹명</th>
                                 <th scope="col">조회수</th>
                                 <th scope="col">공감수</th>
                                 <th scope="col">댓글수</th>
@@ -112,11 +112,11 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>001</td>
-                                <td>id</td>
-                                <td>이름</td>
-                                <td>닉네임</td>
+                                <td>심원용</td>
+                                <td>1</td>
+                                <td>1</td>
                                 <td>음식</td>
+                                <td>마라탕은 맛있다.</td>
                                 <td>3</td>
                                 <td>5</td>
                                 <td>5</td>
@@ -125,11 +125,11 @@
                                 <td>Y</td>
                             </tr>
                             <tr>
-                                <td>001</td>
-                                <td>id</td>
-                                <td>이름</td>
-                                <td>닉네임</td>
+                                <td>심원용</td>
+                                <td>1</td>
+                                <td>1</td>
                                 <td>음식</td>
+                                <td>마라탕은 맛있다.</td>
                                 <td>3</td>
                                 <td>5</td>
                                 <td>5</td>
@@ -138,11 +138,11 @@
                                 <td>Y</td>
                             </tr>
                             <tr>
-                                <td>001</td>
-                                <td>id</td>
-                                <td>이름</td>
-                                <td>닉네임</td>
+                                <td>심원용</td>
+                                <td>1</td>
+                                <td>1</td>
                                 <td>음식</td>
+                                <td>마라탕은 맛있다.</td>
                                 <td>3</td>
                                 <td>5</td>
                                 <td>5</td>
@@ -151,11 +151,11 @@
                                 <td>Y</td>
                             </tr>
                             <tr>
-                                <td>001</td>
-                                <td>id</td>
-                                <td>이름</td>
-                                <td>닉네임</td>
+                                <td>심원용</td>
+                                <td>1</td>
+                                <td>1</td>
                                 <td>음식</td>
+                                <td>마라탕은 맛있다.</td>
                                 <td>3</td>
                                 <td>5</td>
                                 <td>5</td>
@@ -164,11 +164,11 @@
                                 <td>Y</td>
                             </tr>
                             <tr>
-                                <td>001</td>
-                                <td>id</td>
-                                <td>이름</td>
-                                <td>닉네임</td>
+                                <td>심원용</td>
+                                <td>1</td>
+                                <td>1</td>
                                 <td>음식</td>
+                                <td>마라탕은 맛있다.</td>
                                 <td>3</td>
                                 <td>5</td>
                                 <td>5</td>
@@ -177,11 +177,11 @@
                                 <td>Y</td>
                             </tr>
                             <tr>
-                                <td>001</td>
-                                <td>id</td>
-                                <td>이름</td>
-                                <td>닉네임</td>
+                                <td>심원용</td>
+                                <td>1</td>
+                                <td>1</td>
                                 <td>음식</td>
+                                <td>마라탕은 맛있다.</td>
                                 <td>3</td>
                                 <td>5</td>
                                 <td>5</td>
