[기능구현] 블로그 조회/블로그만들기(검증로직필요)/대표블로그 수정

--- a/frontRepo/user/html/UJDGR-0024.html
+++ b/frontRepo/user/html/UJDGR-0024.html
@@ -209,53 +209,55 @@
                     <h2>새 블로그 만들기</h2>
 
                     <div class="content">
-
-                        <div class="data_dl">
-                            <dl>
-                                <dt>블로그명</dt>
-                                <dd>
-                                    <div class="inp_box">
-                                        <input type="text">
-                                        <span>한글, 영문, 숫자 혼용가능 (한글기준 25자 이내)</span>
-                                    </div>
-                                </dd>
-                            </dl>
-                            <dl>
-                                <dt>블로그 닉네임</dt>
-                                <dd>
-                                    <div class="inp_box">
-                                        <input type="text">
-                                        <span>한글, 영문, 숫자 혼용가능 (한글기준 25자 이내)</span>
-                                    </div>
-                                </dd>
-                            </dl>
-                            <dl>
-                                <dt>블로그 주소</dt>
-                                <dd>
-                                    <div class="inp_box">
-                                        <span>http://jdgr/blog/</span>
-                                        <input type="text">
-                                        <span>최소 4자 ~ 최대 32자의 영문 소문자, 숫자로 입력</span>
-                                    </div>
-                                </dd>
-                            </dl>
-                            <dl>
-                                <dt>블로그 프로필 이미지</dt>
-                                <dd>
-                                    <div class="profile_box">
-                                        <div class="img"><img src="../images/ico/ico_profile.svg" alt=""></div>
-                                        <div class="profile_btn">
-                                            <button>등록</button>
-                                            <span class="txt">프로필 이미지는 가로 200px, 세로 200px로 생성됩니다.</span>
+                        <form action="" method="post">
+                            <div class="data_dl">
+                                <dl>
+                                    <dt>블로그명</dt>
+                                    <dd>
+                                        <div class="inp_box">
+                                            <input type="text">
+                                            <span>한글, 영문, 숫자 혼용가능 (한글기준 25자 이내)</span>
                                         </div>
-                                    </div>
-                                </dd>
-                            </dl>
-                        </div>
-
-                        <div class="blog_set_btn">
-                            <a href="">개설하기</a>
-                        </div>
+                                    </dd>
+                                </dl>
+                                <dl>
+                                    <dt>블로그 닉네임</dt>
+                                    <dd>
+                                        <div class="inp_box">
+                                            <input type="text">
+                                            <span>한글, 영문, 숫자 혼용가능 (한글기준 25자 이내)</span>
+                                        </div>
+                                    </dd>
+                                </dl>
+                                <dl>
+                                    <dt>블로그 주소</dt>
+                                    <dd>
+                                        <div class="inp_box">
+                                            <span>http://jdgr/blog/</span>
+                                            <input type="text">
+                                            <span>최소 4자 ~ 최대 32자의 영문 소문자, 숫자로 입력</span>
+                                        </div>
+                                    </dd>
+                                </dl>
+                                <dl>
+                                    <dt>블로그 프로필 이미지</dt>
+                                    <dd>
+                                        <div class="profile_box">
+                                            <div class="img"><img src="../images/ico/ico_profile.svg" alt=""></div>
+                                            <div class="profile_btn">
+                                                <input type="file" id="blogImg" name="blogImg">
+                                                <label for="blogImg">등록</label>
+                                                <span class="txt">프로필 이미지는 가로 200px, 세로 200px로 생성됩니다.</span>
+                                            </div>
+                                        </div>
+                                    </dd>
+                                </dl>
+                            </div>
+    
+                            <div class="blog_set_btn">
+                                <a href="">개설하기</a>
+                            </div>
+                        </form>
 
                     </div>
 
@@ -271,6 +273,30 @@
     <footer>Copyright © KH Group3 PowerBloger. All Rights Reserved.</footer>
     <!-- //footer -->
 
+    <script>
+        const blogImgInp = document.querySelector('.blog_set_layout .right .data_dl dl dd .profile_box .profile_btn input');
+        const blogImgDiv = document.querySelector('.blog_set_layout .right .data_dl dl dd .profile_box .img');
+
+        blogImgInp.addEventListener('change', function () {
+            // 파일이 선택되었는지 확인
+            if (blogImgInp.files.length > 0) {
+                const file = blogImgInp.files[0];
+
+                // FileReader 객체를 사용하여 파일 읽기
+                const reader = new FileReader();
+                reader.onload = function (e) {
+                    // 이미지를 보여주는 div에 이미지 추가
+                    const imgElement = document.createElement('img');
+                    imgElement.src = e.target.result;
+                    blogImgDiv.innerHTML = ''; // 이전에 추가된 이미지 삭제
+                    blogImgDiv.appendChild(imgElement);
+                };
+
+                // 파일을 읽기
+                reader.readAsDataURL(file);
+            }
+        });
+    </script>
 </div>
 </body>
 </html>
