회원목록관리(관리자) 기능 구현 중 + admin.post.detail 파일 추가

--- a/frontRepo/admin/html/AJDGR-0021.html
+++ b/frontRepo/admin/html/AJDGR-0021.html
@@ -147,7 +147,7 @@
 
                 <div class="btn_box_group right mt20">
                     <div class="btn_box">
-                        <a href="" class="btn_grayline">댓글조회</a>
+                        <a href="" class="btn_grayline">목록보기</a>
                     </div>
                     <div class="btn_box">
                         <a href="" class="btn_blue">수정하기</a>
