관리자 댓글 조회 / 상세조회 기능 상세조회 중 공개여부 / 제재여부 카테고리 선택 검색 기능 추가

--- a/frontRepo/admin/html/AJDGR-0023.html
+++ b/frontRepo/admin/html/AJDGR-0023.html
@@ -95,14 +95,9 @@
                                 </tr>
                                 <tr>
                                     <th scope="row"><label for="">공개 여부</label></th>
-                                    <td>
-                                        <div class="form_box">
-                                            <select class="sel_box">
-                                                <option value="">공개</option>
-                                                <option value="">비공개</option>
-                                            </select>
-                                        </div>
-                                    </td>
+                                    <td></td>
+                                    <th scope="row"><label for=""></label></th>
+                                    <td></td>
                                 </tr>
                                 <tr>
                                     <th scope="row"><label for="inp_03">댓글 전체 내용</label></th>
@@ -119,9 +114,7 @@
                                     <td colspan="3">
                                          <div class="form_box">
                                             <select class="sel_box">
-                                                <option value="">제재X</option>
-                                                <option value="">로그인 3일 정지</option>
-                                                <option value="">로그인 7일 정지</option>
+                                                <option value="">삭제</option>
                                             </select>
                                         </div>
                                         
@@ -135,7 +128,7 @@
 
                 <div class="btn_box_group right mt20">
                     <div class="btn_box">
-                        <a href="" class="btn_grayline">목록가기</a>
+                        <a href="" class="btn_grayline">목록으로</a>
                     </div>
                     <div class="btn_box">
                         <a href="" class="btn_grayline">저장</a>
