[기능구현] 블로그 만들기 완료 / 블로그 수정하기 jsp, 서블릿 세팅

--- a/frontRepo/user/html/UJDGR-0014.html
+++ b/frontRepo/user/html/UJDGR-0014.html
@@ -245,7 +245,8 @@
                                     <div class="profile_box">
                                         <div class="img"><img src="../images/ico/ico_profile.svg" alt=""></div>
                                         <div class="profile_btn">
-                                            <button>등록</button>
+                                            <input type="file" id="blogImg" name="blogImg">
+                                            <label for="blogImg">등록</label>
                                             <span class="txt">프로필 이미지는 가로 200px, 세로 200px로 생성됩니다.</span>
                                         </div>
                                     </div>
