신고하기 팝업창 데이터 콘솔 출력 댓글 기능 코드 수정

--- a/frontRepo/admin/html/AJDGR-0022.html
+++ b/frontRepo/admin/html/AJDGR-0022.html
@@ -102,6 +102,15 @@
                             </select>
                         </div>
                     </div>
+                    <div class="search_item">
+                        <label for="sel_01">제재여부</label>
+                        <div class="form_box">
+                            <select class="sel_box">
+                                <option value="">제재x</option>
+                                <option value="">삭제</option>
+                            </select>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- 버튼 -->
@@ -267,3 +276,5 @@
     </div>
 </body>
 </html>
+
+
