--- a/frontRepo/user/html/kkhpop.html
+++ b/frontRepo/user/html/kkhpop.html
@@ -284,55 +284,42 @@
             <input type="text" class="detail_content" placeholder=" 세부 내용 작성">
         </div>
         <div class="modal_footer">
-            <button class="modal_close btn_black">신고하기</button>
+            <button class="modal_close btn_black" onclick="submitReport()">신고하기</button>
         </div>
     </div>
 </div>
 
-<!-- 레이어팝업 경고 모달 -->
-<div id="pop_warning" class="modal_bg warning">
-    <div class="modal_box">
-        <div class="modal_header">
-            <button class="modal_close">닫기</button>
-        </div>
-        <div class="modal_container">
-            
-            <div class="modal_content">
-                <div class="img"></div>
-                <div class="txt">
-                    <strong>비밀글</strong>
-                    <span>본인이 작성한 1:1문의가 아니라면 보실 수 없습니다.</span>
-                </div>
-            </div>
-            
-        </div>
-        <div class="modal_footer">
-            <button class="modal_close btn_black">확인</button>
-        </div>
-    </div>
-</div>
+<script>
+    function submitReport() {
+        // 선택된 라디오 버튼의 값 가져오기
+        var selectedReason = document.querySelector('input[name="select"]:checked');
 
-<!-- 레이어팝업 완료 모달 -->
-<div id="pop_complete" class="modal_bg complete">
-    <div class="modal_box">
-        <div class="modal_header">
-            <button class="modal_close">닫기</button>
-        </div>
-        <div class="modal_container">
+        // 만약 라디오 버튼이 선택되지 않은 경우, 경고 메시지를 표시하고 함수 종료
+        if (!selectedReason) {
+            alert('신고 사유를 선택하세요.');
+            return;
+        }
 
-            <div class="modal_content">
-                <div class="img"></div>
-                <div class="txt">
-                    <strong>1:1 문의 완료</strong>
-                </div>
-            </div>
+        // 선택된 라디오 버튼의 값
+        selectedReason = selectedReason.value;
 
-        </div>
-        <div class="modal_footer">
-            <button class="modal_close btn_black">확인</button>
-        </div>
-    </div>
-</div>
+        // 세부 내용 가져오기
+        var detailContent = document.querySelector('.detail_content').value;
+
+        // 신고 내용 콘솔에 출력 (실제로는 서버로 전송하도록 수정 필요)
+        console.log('선택된 이유:', selectedReason);
+        console.log('세부 내용:', detailContent);
+
+        // 모달 닫기
+        closePopup();
+    }
+
+    function closePopup() {
+        // 모달 닫기
+        var modal = document.getElementById('pop_email');
+        modal.style.display = 'none';
+    }
+</script>
 
 </body>
 </html>
