관리자 신고 목록 조회/상세조회 기능 추가 관련 jsp 파일 vo.get 형식으로 수정

--- a/frontRepo/admin/html/AJDGR-0012-1.html
+++ b/frontRepo/admin/html/AJDGR-0012-1.html
@@ -76,21 +76,21 @@
                             </colgroup>
                             <tbody>
                                 <tr>
-                                    <th scope="row"><label for="">신고 번호</label></th>
+                                    <th scope="row"><label for="">댓글/포스트 번호</label></th>
                                     <td>123</td>
-                                    <th scope="row"><label for="">신고 분류</label></th>
+                                    <th scope="row"><label for="">신고 구분</label></th>
                                     <td>사용자가 체크한 라디오박스 내용</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row"><label for="">작성자</label></th>
+                                    <th scope="row"><label for="">신고자</label></th>
                                     <td>신고자 아이디</td>
-                                    <th scope="row"><label for="">담당 관리자</label></th>
+                                    <th scope="row"><label for="">작성자</label></th>
                                     <td>관리자</td>
                                 </tr>
                                 <tr>
+                                    <th scope="row"><label for="">댓글/포스트 제목</label></th>
+                                    <td>댓글내용 / 포스트제목</td>
                                     <th scope="row"><label for="">신고 일자</label></th>
-                                    <td>2023.11.11 23:00</td>
-                                    <th scope="row"><label for="">처리 일자</label></th>
                                     <td>2023.11.21 23:30</td>
                                 </tr>
                                 <tr>
@@ -108,22 +108,12 @@
                                     <td>2023.11.22 23:30</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row"><label for="inp_03">신고 댓글/포스트 제목</label></th>
-                                    <td colspan="3">컬럼내용컬럼내용컬럼내용컬럼내용컬럼내용컬럼내용</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row"><label for="inp_03">내용</label></th>
-                                    <td colspan="3">컬<br>럼<br>컬<br>럼<br>컬<br>럼<br>컬<br>럼<br>컬<br>럼<br>컬<br>
-                                        럼내용컬럼내용컬럼내용컬럼내용컬럼내용컬럼내용
-                                    </td>
+                                    <th scope="row"><label for="">처리일자</label></th>
+                                    <td>2023.11.21 23:30</td>
                                 </tr>
                                 <tr>
                                     <th scope="row"><label for="inp_03">세부 신고 사유</label></th>
-                                    <td colspan="3">
-                                        <div class="form_box">
-                                           <textarea placeholder="사용자가 작성한 세부 신고 사유"></textarea>
-                                       </div>
-                                   </td>
+                                    <td colspan="3">마음에 안 들어요</td>
                                 </tr>
                                 <tr>
                                     <th scope="row"><label for="inp_03">답변 내용</label></th>
