포스트/댓글 신고 기능 분할

--- a/frontRepo/admin/html/AJDGR-0012-1.html
+++ b/frontRepo/admin/html/AJDGR-0012-1.html
@@ -76,6 +76,10 @@
                             </colgroup>
                             <tbody>
                                 <tr>
+                                    <th scope="row"><label for="">신고번호</label></th>
+                                    <td>123</td>
+                                </tr>
+                                <tr>
                                     <th scope="row"><label for="">댓글/포스트 번호</label></th>
                                     <td>123</td>
                                     <th scope="row"><label for="">신고 구분</label></th>
