유저 신고하기 / 관리자 신고 조회 기능 작업

--- a/frontRepo/user/html/rblamepop.html
+++ b/frontRepo/user/html/rblamepop.html
@@ -7,7 +7,7 @@
 
     <!-- css -->
     <link rel="stylesheet" href="../css/allCss.css">
-    <link rel="stylesheet" href="../css/kkhpop.css">
+    <link rel="stylesheet" href="../css/blamepop.css">
 
     <!-- js -->
     <script src="../js/common.js" defer></script>
@@ -268,7 +268,7 @@
                     <li class="list">
                         <div class="check_area">
                             <input type="radio" name="select" id="5" class="report_reason">
-                            <label class="reason_content"  for="5">개인정보 노출 게시물입니다.</label>
+                            <label class="reason_content"  for="5">개인정보 노출 위험이 있습니다.</label>
                         </div>
                     </li>
                     <li class="list">
